@@ -4,6 +4,7 @@ Changes
 examples/ex1.pl
 examples/ex2.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -18,19 +19,19 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Unicode-Block-Item/00-use.t
-t/Unicode-Block-Item/01-version.t
-t/Unicode-Block-Item/02-pod_coverage.t
-t/Unicode-Block-Item/03-pod.t
-t/Unicode-Block-Item/04-new.t
-t/Unicode-Block-Item/05-base.t
-t/Unicode-Block-Item/06-char.t
-t/Unicode-Block-Item/07-hex.t
-t/Unicode-Block-Item/08-last_hex.t
-t/Unicode-Block-Item/09-width.t
-t/Unicode-Block/00-use.t
-t/Unicode-Block/01-version.t
-t/Unicode-Block/02-pod_coverage.t
-t/Unicode-Block/03-pod.t
-t/Unicode-Block/04-new.t
-t/Unicode-Block/05-next.t
+t/Unicode-Block-Item/01-use.t
+t/Unicode-Block-Item/02-version.t
+t/Unicode-Block-Item/03-new.t
+t/Unicode-Block-Item/04-base.t
+t/Unicode-Block-Item/05-char.t
+t/Unicode-Block-Item/06-hex.t
+t/Unicode-Block-Item/07-last_hex.t
+t/Unicode-Block-Item/08-width.t
+t/Unicode-Block/01-use.t
+t/Unicode-Block/02-version.t
+t/Unicode-Block/03-new.t
+t/Unicode-Block/04-next.t
+xt/Unicode-Block-Item/01-pod_coverage.t
+xt/Unicode-Block-Item/02-pod.t
+xt/Unicode-Block/01-pod_coverage.t
+xt/Unicode-Block/02-pod.t
