@@ -7,11 +7,8 @@ build_requires:
   English: 0
   Error::Pure::Utils: 0.13
   ExtUtils::MakeMaker: 6.36
-  File::Object: 0.06
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -27,6 +24,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Class::Utils: 0.06
   Error::Pure: 0.13
