@@ -1,16 +1,14 @@
-# Pragmas.
 use strict;
 use warnings;
 
-# Modules.
 use Test::More 'tests' => 3;
 use Test::NoWarnings;
 
 BEGIN {
 
 	# Test.
-	use_ok('Unicode::Block::Item');
+	use_ok('Unicode::Block');
 }
 
 # Test.
-require_ok('Unicode::Block::Item');
+require_ok('Unicode::Block');
