@@ -1,8 +1,6 @@
-# Pragmas.
 use strict;
 use warnings;
 
-# Modules.
 use Test::NoWarnings;
 use Test::Pod::Coverage 'tests' => 2;
 
