@@ -2,6 +2,7 @@
  - Add SEE ALSO section to Unicode::Block doc.
  - Add SEE ALSO section to Unicode::Block::Item doc.
  - Fix test 09-width.t for C locale.
+ - Rewrite tests to author tests.
  - Rewrite unassigned unicode character to '' (blank space).
  - Update Module::Install to 1.18 version.
  - Update author name.
